--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -659,6 +659,11 @@ input, select, textarea {
 			width: 100%;
 		}
 
+		.portraid {
+			width : 100px;
+    		height: auto;
+		}
+
 		.image img {
 			border-radius: 4px;
 			display: block;
@@ -1140,9 +1145,12 @@ input, select, textarea {
 			-ms-transition-delay: 0.75s;
 			transition-delay: 0.75s;
 			background-image: linear-gradient(to top, rgba(19, 21, 25, 0.5), rgba(19, 21, 25, 0.5)), url("../../images/overlay.png");
-			background-size: auto, 256px 256px;
-			background-position: center, center;
-			background-repeat: no-repeat, repeat;
+			background-size: auto,
+ 256px 256px;
+			background-position: center,
+ center;
+			background-repeat: no-repeat,
+ repeat;
 			z-index: 2;
 		}
 
